syntax = "proto3";
package deviceapi;

//for app download, update, delete and so on
message AppAction {
    string app_name = 1;
}

//for device cert related
message DeviceCert {
    string se_id = 1;
    string sn = 2;
    string device_cert = 3;
}

//auth code related
message AuthCode {
    string se_id = 1;
    string auth_code = 2;
}

message AuthCodeResponse {
    string se_id = 1;
    string next_stepkey = 2;
    repeated string apdu_list = 3;
}

message AuthCodeServiceResponse {
    string return_code = 1;
    string return_msg = 2;
    AuthCodeResponse return_data = 3;
}

//binding code related
message BindCode {
    string bind_code = 1;
}

//name related
message DeviceName {
    string ble_name = 1;
}